# singleton

./: CMakeLists.txt  Makefile  README.md  main.cpp  singleton.cpp  singleton.h
